Fixed overflow issue with video hero.

--- a/dev/scss/components/_global.scss
+++ b/dev/scss/components/_global.scss
@@ -1,3 +1,7 @@
+body {
+	overflow-x: hidden;
+}
+
 a, a:active, a:focus {
 	color: #9ad3de;
 }
